# libgeometry

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  IGeometry.h  LICENSES.txt  README.txt  README_LINUX.txt  config.cpp  config.h  install_linux.sh  lgcolors.h  libgeometry_pch.cpp  libgeometry_pch.h  libgeometry_vc9.sln  libgeometry_vc9.vcproj  opengl.h  rmsdebug.h  rmsprofile.h
Testing/: ExtendedWmlCamera.cpp  ExtendedWmlCamera.h  MeshObject.cpp  MeshObject.h  Texture.cpp  Texture.h  expmapCL.cpp  test.cpp
WildMagic4/: autobuild_vs2008.bat  autobuild_vs2008_x64.bat  vsvars32_vs2008.bat  vsvars32_vs2008_x64.bat
WildMagic4/LibFoundation/: CopySdkDebugDynamic.sh  CopySdkDebugMemory.sh  CopySdkDebugStatic.sh  CopySdkReleaseDynamic.sh  CopySdkReleaseMemory.sh  CopySdkReleaseStatic.sh  LibFoundation_VC71.vcproj  LibFoundation_VC80.sln  LibFoundation_VC80.vcproj  LibFoundation_VC90.sln  LibFoundation_VC90.vcproj  Wm4Foundation.h  Wm4FoundationLIB.h  Wm4FoundationPCH.cpp  (+3 more)
base/: BitSet.h  DynamicVector.h  IterativeAlgorithm.h  MemoryPool.h  RefCountedVector.h  SparseArray.h
curve/: PolyLoop3.cpp  PolyLoop3.h
curve_processing/: LaplacianCurveDeformer.cpp  LaplacianCurveDeformer.h
geometry/: Frame.cpp  Frame.h  ISurfaceProjector.h  LinearComplex2.cpp  LinearComplex2.h  MatrixBlender.cpp  MatrixBlender.h  PolyLine2.cpp  PolyLine2.h  VectorUtil.cpp  VectorUtil.h  WildMagic2Funcs.h  WmlExtPlane3.cpp  WmlExtPlane3.h  WmlPolygon2.cpp  WmlPolygon2.h
mesh/: GSurface.cpp  GSurface.h  GSurfaceRenderer.cpp  GSurfaceRenderer.h  IDMap.cpp  IDMap.h  IMesh.cpp  IMesh.h  IMeshRenderer.cpp  IMeshRenderer.h  MeshIO.cpp  MeshIO.h  MeshPolygons.cpp  MeshPolygons.h  MeshSelection.cpp  MeshSelection.h  MeshSourceUtil.h  SurfaceAreaSelection.cpp  SurfaceAreaSelection.h  VFMeshMask.cpp  VFMeshMask.h  VFMeshMerge.cpp  VFMeshMerge.h  VFMeshRenderer.cpp  VFMeshRenderer.h  VFTriangleMesh.cpp  VFTriangleMesh.h  VertexSelection.cpp  VertexSelection.h
mesh_processing/: COILSBoundaryDeformer.cpp  COILSBoundaryDeformer.h  DijkstraFrontProp.h  IDeformer.h  LaplacianDeformer.cpp  LaplacianDeformer.h  LaplacianSmoother.cpp  LaplacianSmoother.h  MeshCurvature.cpp  MeshCurvature.h  MeshFunction.cpp  MeshFunction.h  MeshGeodesic.cpp  MeshGeodesic.h  MeshInsertion.cpp  MeshInsertion.h  MeshLaplacian.cpp  MeshLaplacian.h  MeshProjection.cpp  MeshProjection.h  MeshSmoother.cpp  MeshSmoother.h  MeshSubdivider.cpp  MeshSubdivider.h  MeshUtils.cpp  MeshUtils.h  RotInvCoordDeformer.cpp  RotInvCoordDeformer.h  Triangulator2D.cpp  Triangulator2D.h  VertexWeights.cpp  VertexWeights.h
parameterization/: ExpMapGenerator.cpp  ExpMapGenerator.h  PlanarParameterization.cpp  PlanarParameterization.h
pointset/: ParticleGrid.h
segmentation/: Segmentation.cpp  Segmentation.h
spatial/: DistanceCache.cpp  DistanceCache.h  IMeshBVTree.cpp  IMeshBVTree.h  IMeshUVBVTree.cpp  IMeshUVBVTree.h  NeighbourCache.h
(+702 files in other folders)
